  (Florian Angeletti, review by Thomas Refis and Gabriel Scherer,
   reported by Xavier Clerc)

- #8635, #8636: Fix a bad side-effect of the -allow-approx option of
  ocamldep. It used to turn some errors into successes
  (Jérémie Dimino)

- #8701, #8725: Variance of constrained parameters causes principality issues
  (Jacques Garrigue, report by Leo White, review by Gabriel Scherer)

- #8800: Fix soundness bug in extension constructor inclusion
  (Leo White, review by Jacques Garrigue)

- #8810: Env.lookup_module: don't allow creating loops
  (Thomas Refis, report by Leo White, review by Jacques Garrigue)

OCaml 4.08 maintenance branch:
------------------------------

### Bug fixes:

- #7887: ensure frame table is 8-aligned on ARM64 and PPC64
  (Xavier Leroy, report by Mark Hayden, review by Mark Shinwell
   and Gabriel Scherer)

- #8751: fix bug that could result in misaligned data section when compiling to
  native-code on amd64.  (observed with the mingw64 compiler)
  (Nicolás Ojeda Bär, review by David Allsopp)

- #8769, #8770: Fix assertion failure with -pack
  (Leo White, review by Gabriel Scherer, report by Fabian @copy)

- #8816, #8818: fix loading of packed modules with Dynlink (regression in
  #2176).
  (Leo White, report by Andre Maroneze, review by Gabriel Scherer)

OCaml 4.08.0 (13 June 2019)
---------------------------

### Language features:

- #1947: Introduce binding operators (let*, let+, and* etc.)
  (Leo White, review by Thomas Refis)

- #1892: Allow shadowing of items coming from an include
  (Thomas Refis, review by Gabriel Radanne)

- #2122: Introduce local substitutions in signatures: "type t := type_expr"
  and "module M := Extended(Module).Path"
  (Thomas Refis, with help and review from Leo White, and Alain Frisch)

- #1804: New notion of "alerts" that generalizes the deprecated warning
      [@@ocaml.alert deprecated "Please use bar instead!"]
      [@@ocaml.alert unsafe "Please use safe_foo instead!"]