@@ -1,0 +1,1 @@
+type 'a t = 'a Original.t = T
