@@ -1,0 +1,1 @@
+type 'a t = T
